--- a/src/assets/autorepair.css
+++ b/src/assets/autorepair.css
@@ -884,3 +884,12 @@
     text-align: center;
 	border-top:1px solid #2e302f;
   }
+
+  .orange {
+    color: #ED4E00;
+  }
+
+  .center {
+    text-align: center;
+  }
+  
